[package]
name = "temperature-exporter"
version = "0.1.0"
authors = ["Philipp Scheff <philippscheff@me.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
env_logger = "0.9"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
tokio = { version = "1.23", features = ["full"] }
